<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Post.PostActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/black"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="#000000"
        app:title="New Post" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/select_img"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        app:riv_border_color="#333333"
        app:riv_border_width="2dip"
        app:riv_corner_radius="3dip" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/caption"
        android:layout_width="0dp"
        app:boxStrokeColor="@color/blue"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/write_caption_here"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/select_img"
        app:layout_constraintStart_toStartOf="@+id/select_img"
        app:layout_constraintTop_toBottomOf="@+id/select_img">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/gallery" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/share_post"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_post_may_be_appear_on_post_and_can_be_seen_on_the_posts_tab_under_your_profile"
        app:layout_constraintStart_toStartOf="@+id/post"
        app:layout_constraintTop_toBottomOf="@+id/post" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/blue"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/post_button"
            android:backgroundTint="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/post" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>